made font size bigger - avoid overlapping text

--- a/crown-clothing/src/routes/checkout/checkout.styles.scss
+++ b/crown-clothing/src/routes/checkout/checkout.styles.scss
@@ -10,13 +10,14 @@
     width: 100%;
     padding: 10px 0;
     display: flex;
+    font-size: 20px;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
 
     .header-block {
       text-transform: capitalize;
-      margin-right: 5px;
-      margin-left: 5px;
+      margin-right: 10px;
+      margin-left: 10px;
       width: 23%;
 
       &:last-child {
